Update to Java 17 and Framework 17
Change-Id: Icfcdf3e5853fac833901874ae90289d22a0b19fd