@@ -3,7 +3,24 @@ All notable changes to this project will be documented in this file, which follo
 on [Keep a CHANGELOG](http://keepachangelog.com/). This project adheres to
 [Semantic Versioning](http://semver.org/).
 
-## [Unrelease]
+## [Unreleased]
+
+## [17.0.0] - 2023-05-23
+### Changed
+- Update to Java 17
+- Update to Jee 8.0
+- Update maven compiler to 3.8.0
+- Force maven to use Java 17+ compiler
+- Upgrade Liquibase version to 4.10.0
+- Update plugins.jaxb2.version to 0.15.2
+- Update maven.enforcer.plugin to 3.0.0-M3
+- Update require-latest-versions-enforcer-rule.plugin to 17.0.0
+- Update maven surefire plugin to 2.22.2
+- Update maven jacoco plugin to 0.8.4
+### Added
+- Added `--illegal-access=permit` to maven surefire plugin
+- Added `--illegal-access=permit` to maven failsafe plugin
+- Add 'javaee-api.version' property of 8.0.1
 
 ## [8.0.1] - 2021-10-11
 ### Changed
